# roc-toolkit

./: .gitignore  README.md  cookiehelper.py  pyrocalert.py  pyroccaptchaselector.py  requirements.txt  roc_auto_solve.py  run.py  sellcatch.py  sellcatchbypage.py  settingsloader.py  settingstools.py  setup.cfg  site.settings  spyevent.py  test.py  user.settings
.github/workflows/: python-app.yml
captcha/: pyrocaltertgui.py
rocalert/: __main__.py  configuration.py  cookiehelper.py  events.py  main.py  pages.py  pyrocalert.py  remote_lookup.py  roc_buyer.py  roc_web_handler.py  rocaccount.py  rocpage.py
rocalert/captcha/: __init__.py  captcha.py  captcha_logger.py  captcha_map.py  captchacachemanger.py  captchaexpirationqueue.py  captchaprovider.py  equation_solver.py  pyrocaltertgui.py  pyroccaptchaselector.py  roc_auto_solve.py  rocaccount.py
rocalert/enums/: __init__.py  captchatype.py  rocpagetype.py  rocrace.py  weapons.py  weapontypes.py
rocalert/events/: sizedoesntmatter.py
rocalert/logging/: __init__.py  timestampgenerator.py
rocalert/models/: __init__.py  armorymodel.py  armorypurchasemodel.py  captchamodels.py  common.py  itemcostpair.py  trainingmodel.py  trainingpurchasemodel.py
rocalert/pagegenerators/: __init__.py  armorydetails.py  basedetails.py  bs4souppage.py  generatortools.py  page.py  trainingdetails.py  turnbox.py  (+1 more)
tests/: mocks.py  test_armory.py  test_captchalogger.py  test_captchexpirationqueue.py  test_exception_handler.py  test_keyrepairer.py  test_pages.py  test_settings.py  test_sleeptimer.py  test_training.py
(+110 files in other folders)
