[metadata]
name = roc-toolkit
version = 1.2.0
description = A set of tools for ROC
url = https://github.com/matthewnbrown/roc-toolkit
author = Matt Brown
author_email = gitmattb@gmail.com
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
    sympy
    pillow
    numpy
    requests
    2captcha-python
    opencv-python
    browser-cookie3 >= 0.16.1

[options.entry_points]
console_scripts =
    roc-toolkit-cli = rocalert.__main__:main

[options.packages.find]
exclude =
    captcha_img

